# lattices

./: .gitignore  .travis.meta.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  default.nix  lattices.cabal  lattices.nix  release  shell.nix  stack.yaml
.github/workflows/: haskell-ci.yml
Algebra/: Enumerable.hs  Lattice.hs  PartialOrd.hs
Algebra/Lattice/: Divisibility.hs  Dropped.hs  Free.hs  Levitated.hs  Lexicographic.hs  Lifted.hs  Op.hs  Ordered.hs
Algebra/PartialOrd/: Instances.hs
src/Algebra/: Heyting.hs  Lattice.hs  PartialOrd.hs
src/Algebra/Heyting/: Free.hs
src/Algebra/Heyting/Free/: Expr.hs
src/Algebra/Lattice/: Boolean.hs  Divisibility.hs  Dropped.hs  Flat.hs  Free.hs  Fuzzy.hs  Heyting.hs  Levitated.hs  Lexicographic.hs  Lifted.hs  M2.hs  M3.hs  N5.hs  Op.hs  Ordered.hs  Replicated.hs  Stacked.hs  Unicode.hs  Wide.hs  ZeroHalfOne.hs
src/Algebra/Lattice/Free/: Final.hs
src/Algebra/Lattice/Heyting/: BoolRing.hs  Layered.hs
src/Algebra/PartialOrd/: Instances.hs
test/: Tests.hs
test/Tests/: Heyting.hs
