cabal-version:      1.18
name:               lattices
version:            2.2.1
category:           Math
license:            BSD3
license-file:       LICENSE
author:
  Maximilian Bolingbroke <batterseapower@hotmail.com>, Oleg Grenrus <oleg.grenrus@iki.fi>

maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
homepage:           http://github.com/phadej/lattices/
bug-reports:        http://github.com/phadej/lattices/issues
copyright:
  (C) 2010-2015 Maximilian Bolingbroke, 2016-2019 Oleg Grenrus

build-type:         Simple
extra-source-files: CHANGELOG.md
extra-doc-files:
  m2.png
  m3.png
  n5.png
  wide.png

tested-with:
  GHC ==8.6.5
   || ==8.8.3
   || ==8.10.4
   || ==9.0.2
   || ==9.2.8
   || ==9.4.7
   || ==9.6.3
   || ==9.8.1

synopsis:
  Fine-grained library for constructing and manipulating lattices

description:
  In mathematics, a lattice is a partially ordered set in which every two
  elements @x@ and @y@ have a unique supremum (also called a least upper bound, join, or @x /\\ y@)
  and a unique infimum (also called a greatest lower bound, meet, or @x \\/ y@).
  .
  This package provide type-classes for different lattice types, as well
  as a class for the partial order.

source-repository head
  type:     git
  location: git://github.com/phadej/lattices.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    Algebra.Lattice
    Algebra.Lattice.Divisibility
    Algebra.Lattice.Dropped
    Algebra.Lattice.Free
    Algebra.Lattice.Free.Final
    Algebra.Lattice.Levitated
    Algebra.Lattice.Lexicographic
    Algebra.Lattice.Lifted
    Algebra.Lattice.M2
    Algebra.Lattice.M3
    Algebra.Lattice.N5
    Algebra.Lattice.Op
    Algebra.Lattice.Ordered
    Algebra.Lattice.Unicode
    Algebra.Lattice.Wide
    Algebra.Lattice.ZeroHalfOne

  exposed-modules:
    Algebra.Heyting
    Algebra.Heyting.Free
    Algebra.Heyting.Free.Expr

  exposed-modules:
    Algebra.PartialOrd
    Algebra.PartialOrd.Instances

  build-depends:
      base                        >=4.12     && <4.21
    , containers                  >=0.5.0.0  && <0.8
    , deepseq                     >=1.3.0.0  && <1.6
    , hashable                    >=1.2.7.0  && <1.5
    , integer-logarithms          >=1.0.3    && <1.1
    , QuickCheck                  >=2.12.6.1 && <2.16
    , tagged                      >=0.8.6    && <0.9
    , transformers                >=0.3.0.0  && <0.7
    , universe-base               >=1.1      && <1.2
    , universe-reverse-instances  >=1.1      && <1.2
    , unordered-containers        >=0.2.8.0  && <0.3

  if !impl(ghc >=9.6)
    build-depends: foldable1-classes-compat >=0.1 && <0.2

  if !impl(ghc >=9.2)
    if impl(ghc >=9.0)
      build-depends: ghc-prim
    else
      build-depends: OneTuple >=0.4 && <0.5

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      base
    , containers
    , lattices
    , QuickCheck
    , quickcheck-instances        >=0.3.19 && <0.4
    , tasty                       >=1.2.1  && <1.6
    , tasty-quickcheck            >=0.10   && <0.11
    , transformers
    , universe-base
    , universe-reverse-instances
    , unordered-containers

  if !impl(ghc >=8.0)
    build-depends: semigroups
